Sort using field values

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -31,6 +31,9 @@
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
+        <a class="nav-link" href="/manual/">Manual</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="/admin/">Admin</a>
       </li>
     </ul>
@@ -78,7 +81,7 @@
   {% if result.oil %}
     <div class="card text-white bg-dark mb-3">
       <div class="card-body">
-        <h4 class="card-title">{{ result.oil }}</h4>
+        <h4 class="card-title">{{ result.oil }} - Metabolite profiles analysed by GC-MS</h4>
         <p class="card-text">{{ result.oil.abbr }} - {{ result.oil.scientific_name }} - {{ result.oil.family }}</p>
         {% if result.oil.graph %}
         <img src="{{ result.oil.graph.url }}" class="card-img-top" />
@@ -86,15 +89,15 @@
       </div>
     </div>
     {% for metabolite in result.metabolites %}
-      <div class="card mb-3" style="max-width: 18rem;">
+      <div class="card mb-3" style="max-width: 40rem;">
         <div class="card-body">
           <h4 class="card-title">{{ metabolite.metabolite }}</h4>
           {% if metabolite.metabolite.image %}
           <img src="{{ metabolite.metabolite.image.url }}" class="card-img-top" />
           {% endif %}
+          Identifier Ion (m/z): {{ metabolite.mzratio }}<br>
           Match Factor: {{ metabolite.identity }}%<br>
-          Product Ion: {{ metabolite.mzratio }}<br>
-          Time: {{ metabolite.time }} min<br>
+          Elution Time: {{ metabolite.time }} min<br>
           Relative% 1: {{ metabolite.relative_abundance1 }}<br>
           Relative% 2: {{ metabolite.relative_abundance2 }}<br>
           Relative% 3: {{ metabolite.relative_abundance3 }}<br>
@@ -106,23 +109,23 @@
   {% if result.metabolite %}
     <div class="card text-white bg-dark mb-3">
       <div class="card-body">
-        <h4 class="card-title">{{ result.metabolite }}</h4>
+        <h4 class="card-title">{{ result.metabolite }} is found in</h4>
         {% if result.metabolite.image %}
         <img src="{{ result.metabolite.image.url }}" class="card-img-top" />
         {% endif %}
       </div>
     </div>
     {% for oil in result.oils %}
-      <div class="card mb-3" style="max-width: 18rem;">
+      <div class="card mb-3" style="max-width: 40rem;">
         <div class="card-body">
           <h4 class="card-title">{{ oil.oil }}</h4>
           <p class="card-text">{{ oil.oil.abbr }} - {{ oil.oil.scientific_name }} - {{ oil.oil.family }}</p>
           {% if oil.oil.graph %}
           <img src="{{ oil.oil.graph.url }}" class="card-img-top" />
           {% endif %}
+          Identifier Ion (m/z): {{ oil.mzratio }}<br>
           Match Factor: {{ oil.identity }}%<br>
-          Product Ion: {{ oil.mzratio }}<br>
-          Time: {{ oil.time }} min<br>
+          Elution Time: {{ oil.time }} min<br>
           Relative% 1: {{ oil.relative_abundance1 }}<br>
           Relative% 2: {{ oil.relative_abundance2 }}<br>
           Relative% 3: {{ oil.relative_abundance3 }}<br>
