--- a/app/templates/manual.html
+++ b/app/templates/manual.html
@@ -1,47 +1,85 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-  <title>Essential Oils Database Webpage</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-  <style>
-  .header {
-    margin-bottom: 0;
-    background-color: rgb(65, 118, 144);
-    color: #f5dd5d;
-  }
-  </style>
+<title>Himalayan Essential Oils Database Manual</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-flat.css">
+<style>
+.center {
+  margin: auto;
+  width: 60%;
+  border: 0px solid #73AD21;
+  padding: 10px;
+  text-align: center;
+}
+* {
+  box-sizing: border-box;
+}
+
+/* Create two equal columns that floats next to each other */
+.column {
+  float: left;
+  width: 50%;
+  padding: 10px;
+  
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+</style>
+
 </head>
 
-<body class="d-flex flex-column h-100">
 
-<div class="jumbotron text-center header">
-  <h1>Essential Oils Database</h1> 
+<body>
+
+	<div class="center" style="margin-bottom:0">
+  <h1>Essential Oils Database Manual</h1> 
+</div>
+<div class="center" style="margin-bottom:0">
+  <h1></h1> 
 </div>
 
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="collapsibleNavbar">
-    <ul class="navbar-nav ml-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="/">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/admin/">Admin</a>
-      </li>
-    </ul>
-  </div>  
-</nav>
+<div class="row">
+<div class="column">
+<div class="w3-container w3-flat-silver">
+  <h2 class="center">User</h2>
+  <a href="https://imgdump4.novarata.net/image.uploads/05-11-2019/original-a5ba9822ff22f2eabf51780a9fddf244.png"><img src="https://imgdump4.novarata.net/image.uploads/05-11-2019/original-a5ba9822ff22f2eabf51780a9fddf244.png" height="300" width="500"></a>
 
 
-<div class="container" style="margin-top:30px">
+  <h3>Searching for the metabolites present in a certain oil:</h3>
+  <p>Select an oil from dropdown menu under oil names.</p><p>Then Press Submit to get a list of all the metabolites present in that oil.</p>
+  <h3>Searching for the oils in which a certain metabolite is present:</h3>
+  <p>Select a metabolite from dropdown menu under metabolite names.</p><p>Then Press Submit to get a list of all the oils in which that metabolite is present.</p>
+
+</div>
+</div>
+
+<div class="column">
+
+
+<div class="w3-container w3-flat-silver">
+  <h2 class="center">Admin</h2>
+  <div>Admin needs to log in to the application to do the following things: </div>
+  <a href="https://imgdump4.novarata.net/image.uploads/05-11-2019/original-ef74c4bc03a3b38d651c2f7ec1d99abc.png"><img src="https://imgdump4.novarata.net/image.uploads/05-11-2019/original-ef74c4bc03a3b38d651c2f7ec1d99abc.png"/ height="300" width="500"></a>
+  
+  <h3>Add data of a new oil using a csv file:</h3>
+  <p>Fill all the required feilds and upload the .csv file. Click submit to add the data to the database.</p>
+  <h3>Adding new admins:</h3>
+  <p>This can be done under the Authentication and Authorization menu.</p>
+  <h3>Changing Specefic data already present in the database:</h3>
+  <p>This can be done under the APP menu. Where a metabolite or an oil can be deleted. Through menu can be used to change the attributes of the through table</p>
+
+</div>
+</div>
+</div>
+
+<div class = "center" class="container" style="margin-top:30px">
   <div style="margin-bottom: 2em;">
     <h3>Developers</h3>
     Varun Singh<br>
@@ -55,11 +93,10 @@
   </div>
 </div>
 
-<footer class="page-footer font-small blue">
+<footer class = "center" class="page-footer font-small blue">
   <div class="footer-copyright text-center py-3">© 2019 Copyright:
     <a href="https://www.iitmandi.ac.in/"> IIT Mandi</a>
   </div>
 </footer>
-
 </body>
-</html>
+</html> 
